--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '20'  # Adjust if needed
 
     - name: Install dependencies
-     run: sudo npm install -f
+     run: npm install 
 
     - name: Copy files to server (scp)
       uses: appleboy/scp-action@master
