--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,22 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'  # Adjust if needed
+        node-version: '20'
+
+    - name: Cleanup server before copy (excluding .env and ecosystem.config.js)
+      uses: appleboy/ssh-action@master
+      with:
+        host: 157.20.190.21
+        username: ubuntu
+        password: r@ck@1234$#@!
+        port: 22
+        script: |
+          if [ -d "/var/www/html/shiksha_new_backend" ]; then
+            echo "Directory exists. Cleaning up except .env and ecosystem.config.js..."
+            find /var/www/html/shiksha_new_backend -mindepth 1 ! -name '.env' ! -name 'ecosystem.config.js' -exec rm -rf {} +
+          else
+            echo "Directory does not exist. Skipping cleanup."
+          fi
 
     - name: Copy files to server (scp)
       uses: appleboy/scp-action@master
