--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-# MONGODB_URI= mongodb://localhost:27017/sc_database
 
-MONGODB_URI=mongodb://157.20.190.21:17357/sc_database
+
+# MONGODB_URI=mongodb://157.20.190.21:17357/sc_database
+MONGODB_URI=mongodb+srv://mukesh12:CR1gh7iFpT7KWX8s@scdevelopment.8lczdd6.mongodb.net/?retryWrites=true&w=majority&appName=scdevelopment
 JWT_SECRET= your_jwt_secret_key
-
+CR1gh7iFpT7KWX8s
 EMAILJS_SERVICE_ID=service_k6grtki
 EMAILJS_TEMPLATE_ID=template_exyyt3c
 EMAILJS_PRIVATE_KEY=JW1MH-xQQRbp8SIvY
