--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 
 
 # MONGODB_URI=mongodb://157.20.190.21:17357/sc_database
-MONGODB_URI=mongodb+srv://mukesh12:CR1gh7iFpT7KWX8s@scdevelopment.8lczdd6.mongodb.net/?retryWrites=true&w=majority&appName=scdevelopment
+MONGODB_URI=mongodb+srv://mukesh12:CR1gh7iFpT7KWX8s@scdevelopment.8lczdd6.mongodb.net/sc_development?retryWrites=true&w=majority&appName=scdevelopment
+
 JWT_SECRET= your_jwt_secret_key
 CR1gh7iFpT7KWX8s
 EMAILJS_SERVICE_ID=service_k6grtki
