--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
             set -e  # Exit on error
             
             # Navigate to app directory
-            cd /home/ubuntu/Docker
+            cd /home/ubuntu/Docker/SC_Backend
 
             echo "Pulling latest code from Git"
             git pull origin main
