--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
             cd /home/ubuntu/Docker/SC_Backend
 
             echo "Pulling latest code from Git"
-            git pull origin main
+            git pull origin UAT
 
             echo "Building and starting services (zero downtime attempt)"
             docker-compose up -d --build
