--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   backend:
     build: .
-    container_name: backend-app
+    container_name: backend
     ports:
       - "5000:5000"
     volumes:
