--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,6 +22,7 @@ jobs:
           script: |
             pwd  # Print working directory
             ls -la  # Check if the files exist
+            git config --global --add safe.directory /home/ubuntu/code/SC_Backend
             cd /home/ubuntu/code/SC_Backend/
             git stash
             git pull origin UAT
