--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,6 +26,8 @@ jobs:
             cd /home/ubuntu/code/SC_Backend/
             git stash
             git pull origin UAT
+            export DOCKER_BUILDKIT=1
+            export COMPOSE_DOCKER_CLI_BUILD=1
             sudo docker-compose down
             sudo docker-compose build --no-cache
             sudo docker-compose up -d
