--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,9 +1,10 @@
+
 name: Deploy Backend
 
 on:
   push:
     branches:
-      - UAT
+      - dev
 
 jobs:
   deploy:
@@ -16,19 +17,20 @@ jobs:
       - name: SSH into EC2 & Deploy
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.EC2_DEV_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
+          port: 32321
           script: |
             pwd  # Print working directory
             ls -la  # Check if the files exist
-            git config --global --add safe.directory /home/ubuntu/code/SC_Backend
-            cd /home/ubuntu/code/SC_Backend/
+            git config --global --add safe.directory /home/ubuntu/Shikshacart-code/SC_Backend
+            cd /home/ubuntu/Shikshacart-code/SC_Backend/
             git reset --hard HEAD
-            git pull origin UAT
+            git pull origin dev
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
-            sudo docker-compose down
-            sudo docker-compose build --no-cache
-            sudo docker-compose up -d
+            sudo docker compose down
+            sudo docker compose build --no-cache
+            sudo docker compose up -d
             sudo docker ps -a
