--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.5.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
