--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,7 +28,7 @@ jobs:
             git pull origin UAT
             export DOCKER_BUILDKIT=1
             export COMPOSE_DOCKER_CLI_BUILD=1
-            sudo docker-compose down
+            sudo docker compose down
             sudo docker compose build --no-cache
             sudo docker compose up -d
             sudo docker ps -a
