--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -53,3 +53,5 @@ jobs:
             sudo docker compose down
             sudo docker compose build --no-cache
             sudo docker compose up -d
+            sudo docker builder prune -a -f
+            sudo docker image prune -f
